--- a/public/css/base.css
+++ b/public/css/base.css
@@ -7,17 +7,17 @@ body {
   font-size: 1vw;
   font-family: Arial, Helvetica, sans-serif;
   background: url(/img/bg-body.jpg) 0 0 repeat-y;
-  /* overflow: hidden; */
-  /* background: url(../img/bg.jpg) 0 0 no-repeat;
-  background-size: 100% 100%; */
   border: 0px solid black;
-}
 
+  overflow: hidden;
+  background: url(../img/bg.jpg) 0 0 no-repeat;
+  background-size: 100% 100%;
+}
+/* 
 .page {
   width: 100%;
   padding-bottom: 56.25%;
   position: relative;
-  /* border: 1px solid red; */
 }
 .page-holder {
   position: absolute;
@@ -25,13 +25,12 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  /* border: 1px solid blue; */
   margin: auto;
   overflow: hidden;
 
   background: url(../img/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%;
-}
+} */
 
 .wrapper,
 .navbar {
@@ -363,7 +362,7 @@ button:active {
   background: #fff;
   border-radius: 4.167vw;
   padding: 1.8vw 3vw;
-  text-align: left;
+  text-align: center;
   color: #000;
 }
 .bubble-left:before {
