--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -1,13 +1,15 @@
 body,
 html {
-  background: url(../img/pandemics/bg-body.jpg) 0 0 repeat-y;
+  /* background: url(../img/pandemics/bg-body.jpg) 0 0 repeat-y; */
+  background: url(../../img/pandemics/bg.jpg) 0 0 no-repeat !important;
+  background-size: 100% 100% !important;
 }
-
+/* 
 .page-holder {
   background: url(../../img/pandemics/bg.jpg) 0 0 no-repeat !important;
   background-size: 100% 100% !important;
   border: 0px solid red;
-}
+} */
 .gina {
   bottom: 2.8646vw;
   left: 8.8542vw;
