--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -1,18 +1,15 @@
-/* body {
-  background: url(../../img/zoonotic/bg.jpg) 0 0 no-repeat;
-  background-size: 100% 100%;
-} */
-
 body,
 html {
-  background: url(../img/zoonotic/bg-body.jpg) 0 0 repeat-y;
+  /* background: url(../img/zoonotic/bg-body.jpg) 0 0 repeat-y; */
+  background: url(../../img/zoonotic/bg.jpg) 0 0 no-repeat !important;
+  background-size: 100% 100% !important;
 }
-
+/* 
 .page-holder {
   background: url(../../img/zoonotic/bg.jpg) 0 0 no-repeat !important;
   background-size: 100% 100% !important;
   border: 0px solid red;
-}
+} */
 
 .progressbar .worldtitle {
   top: 10%;
